--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ target_link_libraries(GP2BaseCode
 						${SDL2MAIN_LIBRARY}
 						${OPENGL_LIBRARIES}
 						${GLEW_LIBRARIES} )
+add_custom_command(TARGET GP2BaseCode POST_BUILD COMMAND
+					${CMAKE_COMMAND} -E copy_directory
+					${CMAKE_SOURCE_DIR}/assets
+					$<TARGET_FILE_DIR:GP2BaseCode>/assets)
 
 if (MSVC)
 add_custom_command(TARGET GP2BaseCode POST_BUILD
