--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -ftest-coverage -fpr
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
+find_package(GLM REQUIRED)
 
 add_executable(GP2BaseCode 
 				src/main.cpp 
@@ -19,7 +20,8 @@ add_executable(GP2BaseCode
 include_directories(GP2BaseCode include/ 
 					${SDL2_INCLUDE_DIR}
 					${OPENGL_INCLUDE_DIRS}
-					${GLEW_INCLUDE_DIRS} )
+					${GLEW_INCLUDE_DIRS}
+					${GLM_INCLUDE_DIRS} )
 target_link_libraries(GP2BaseCode 
 						${SDL2_LIBRARY}
 						${SDL2MAIN_LIBRARY}
