--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,25 +8,30 @@ find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLM REQUIRED)
+find_package(SDL2_Image REQUIRED)
 
 add_executable(GP2BaseCode 
 				src/main.cpp 
 				src/Graphics.cpp
 				src/Shader.cpp
+				src/Texture.cpp
 				include/Common.h
 				include/Graphics.h
 				include/Vertex.h
-				include/Shader.h )
+				include/Shader.h
+				include/Texture.h )
 include_directories(GP2BaseCode include/ 
 					${SDL2_INCLUDE_DIR}
 					${OPENGL_INCLUDE_DIRS}
 					${GLEW_INCLUDE_DIRS}
-					${GLM_INCLUDE_DIRS} )
+					${GLM_INCLUDE_DIRS}
+					${SDL2IMAGE_INCLUDE_DIR} )
 target_link_libraries(GP2BaseCode 
 						${SDL2_LIBRARY}
 						${SDL2MAIN_LIBRARY}
 						${OPENGL_LIBRARIES}
-						${GLEW_LIBRARIES} )
+						${GLEW_LIBRARIES}
+						${SDL2IMAGE_LIBRARY} )
 add_custom_command(TARGET GP2BaseCode POST_BUILD COMMAND
 					${CMAKE_COMMAND} -E copy_directory
 					${CMAKE_SOURCE_DIR}/assets
