--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,31 +10,36 @@ find_package(GLEW REQUIRED)
 find_package(GLM REQUIRED)
 find_package(SDL2_Image REQUIRED)
 find_package(SDL2_ttf REQUIRED)
+find_package(FBX REQUIRED)
 
 add_executable(GP2BaseCode 
 				src/main.cpp 
 				src/Graphics.cpp
 				src/Shader.cpp
 				src/Texture.cpp
+				src/FileSystem.cpp
 				include/Common.h
 				include/Graphics.h
 				include/Vertex.h
 				include/Shader.h
-				include/Texture.h )
+				include/Texture.h
+				include/FileSystem.h )
 include_directories(GP2BaseCode include/ 
 					${SDL2_INCLUDE_DIR}
 					${OPENGL_INCLUDE_DIRS}
 					${GLEW_INCLUDE_DIRS}
 					${GLM_INCLUDE_DIRS}
 					${SDL2IMAGE_INCLUDE_DIR}
-					${SDL2_TTF_INCLUDE_DIR} )
+					${SDL2_TTF_INCLUDE_DIR}
+					${FBX_INCLUDE_DIR} )
 target_link_libraries(GP2BaseCode 
 						${SDL2_LIBRARY}
 						${SDL2MAIN_LIBRARY}
 						${OPENGL_LIBRARIES}
 						${GLEW_LIBRARIES}
 						${SDL2IMAGE_LIBRARY}
-						${SDL2_TTF_LIBRARIES} )
+						${SDL2_TTF_LIBRARIES}
+						${FBX_LIBRARY} )
 add_custom_command(TARGET GP2BaseCode POST_BUILD COMMAND
 					${CMAKE_COMMAND} -E copy_directory
 					${CMAKE_SOURCE_DIR}/assets
